Modified GetXmlName to return valid Xml names.  It was previously not allowing any uppercase letters in an element name.  Even if the [OptionOutputOriginalCase] was true, the [OptionOutputAsXml] option when true was forcing what it thought to be valid Xml names.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.suo
+/Release/1_4_0/HAPExplorer/obj/Debug
+/Release/1_4_0/HAPExplorer/obj/Release
+/Release/1_4_0/Html2Rss/obj/Debug
+/Release/1_4_0/Html2Txt/obj/Debug
+/Release/1_4_0/GetDocLinks/obj/Debug
+/Release/1_4_0/Html2Xml/obj/Debug
+/Release/1_4_0/HtmlAgilityPack/obj/Debug
